# github-actions-enterprise-templates

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  reusable-docker-build-push.yml  reusable-node-ci.yml  reusable-python-ci.yml  reusable-release.yml  reusable-security-scan.yml  reusable-terraform-plan.yml
actions/notify-slack/: action.yml
actions/semantic-version/: action.yml
actions/setup-python-cached/: action.yml
docs/: authoring-guide.md  catalog.md
src/: main.py
src/gha_validator/: __init__.py  cli.py  config.py  rules.py  validator.py
tests/: test_rules.py  test_validator.py
