[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gha-validator"
version = "0.1.0"
description = "Hardening linter for the reusable GitHub Actions workflows in this library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Sawant" }]
keywords = ["github-actions", "reusable-workflows", "devops", "security", "linter"]
dependencies = ["click>=8.1", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7"]

[project.scripts]
gha-lint = "gha_validator.cli:main"

[project.urls]
Homepage = "https://github.com/abhisheksawant52/github-actions-enterprise-templates"
Issues = "https://github.com/abhisheksawant52/github-actions-enterprise-templates/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
